fix: set history item z-index
Merge-request: B-I-HOMEPAGE-MR-37
Merged-by: 구원 라 <laggu91@gmail.com>

--- a/styles/history.module.css
+++ b/styles/history.module.css
@@ -29,6 +29,7 @@
 .historyItem.show {
     opacity: 1;
     transform: none;
+    z-index: 1;
 }
 
 .historyItem:nth-child(odd) {
